# claude-code-telegram

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: projects.yaml
docs/: configuration.md
src/bot/: orchestrator.py
src/bot/features/: registry.py  voice_handler.py
src/bot/handlers/: callback.py  cc_helpers.py  command.py  message.py
src/bot/middleware/: security.py
src/claude/: sdk_integration.py  session.py
src/config/: environments.py  loader.py  settings.py
src/security/: validators.py
src/storage/: models.py  repositories.py
src/utils/: constants.py  file_utils.py  shell_utils.py
tests/unit/: test_orchestrator.py
