[project]
name = "claude-code-telegram"
version = "1.5.0"
description = "Telegram bot for remote Claude Code access with comprehensive configuration management"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Richard Atkinson", email = "richardatk01@gmail.com"},
]
keywords = ["telegram", "bot", "claude", "ai", "development", "remote", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "anthropic>=0.84.0",
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.48",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[rate-limiter]>=22.6",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/richardatkinson/claude-code-telegram"
Repository = "https://github.com/richardatkinson/claude-code-telegram"
Documentation = "https://github.com/richardatkinson/claude-code-telegram/blob/main/docs/"

[project.scripts]
claude-telegram-bot = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    "python>=3.11",
    "python-telegram-bot[rate-limiter]>=22.6",
    "structlog>=25.4.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.39",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "apscheduler>=3.10",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
voice = [
    "mistralai>=1.0.0",
    "openai>=1.0.0",
]

[dependency-groups]

[tool.hatch.build.targets.wheel]
packages = ["src"]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
    "autoflake>=2.3.2"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
